--- a/.github/workflows/statik.yml
+++ b/.github/workflows/statik.yml
@@ -29,6 +29,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
+          lfs: true
 
       - name: Recursively compile tex files
         run: rec "\.tex$" "tectonic"
