--- a/.github/workflows/statik.yml
+++ b/.github/workflows/statik.yml
@@ -28,6 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           lfs: true
 
       - name: Recursively compile tex files
