--- a/.github/workflows/statik.yml
+++ b/.github/workflows/statik.yml
@@ -31,6 +31,11 @@ jobs:
           fetch-depth: 0
           lfs: true
 
+      - name: Set ownership
+        run: |
+          # this is to fix GIT not liking owner of the checkout dir
+          chown -R $(id -u):$(id -g) $PWD
+
       - name: Recursively compile tex files
         run: rec "\.tex$" "tectonic"
         
