--- a/.github/workflows/filenames.yml
+++ b/.github/workflows/filenames.yml
@@ -8,7 +8,7 @@ jobs:
 
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/csunibo/filenameslinter:latest
+      image: ghcr.io/cartabinaria/filenameslinter:latest
 
     steps:
       - uses: actions/checkout@v4
@@ -17,7 +17,7 @@ jobs:
 
       - uses: actions/checkout@v4
         with:
-          repository: csunibo/config
+          repository: cartabinaria/config
           path: .config
 
       - name: Check the `appunti` folder
