--- a/.github/workflows/check_repos.yaml
+++ b/.github/workflows/check_repos.yaml
@@ -4,7 +4,6 @@ on:
   schedule:
     - cron: '0 0 * * 1'
 
-
 jobs:
   check:
     runs-on: ubuntu-latest
@@ -20,14 +19,13 @@ jobs:
 
             for r in $(jq -r '.[].url' < ./teachings.json); do
               if [ $(curl -s -o /dev/null -w "%{http_code}" https://github.com/$GITHUB_REPOSITORY_OWNER/$r) -eq 404 ]; then
-                echo $r NOT FOUND;
+                echo "::error::$r NOT FOUND";
                 OK=false
               fi
             done
 
             if ! $OK; then
-              echo "Some repos do not exist"
+              echo "::error::Some repos do not exist on github but are present on teachings.json"
               exit 1
             fi
           '
-
