fix: escape special char on regex for statik

--- a/.github/workflows/statik.yaml
+++ b/.github/workflows/statik.yaml
@@ -69,7 +69,7 @@ jobs:
           -l
           -b "https://risorse.vercel.app/${{ github.event.repository.name }}/"
           -i "${{inputs.regex_include}}"
-          -e "(README*|.github)"
+          -e "(README*|\.github)"
           site
 
       - name: Generate site artifact
