--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Stefano Volpe <foxy@teapot.ovh>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 *.json linguist-detectable
