--- a/.github/workflows/check_repos.yaml
+++ b/.github/workflows/check_repos.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 Samuele Musiani <samu@teapot.ovh>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: Check repo existance
 
 on:
