--- a/.github/workflows/filenames.yaml
+++ b/.github/workflows/filenames.yaml
@@ -1,3 +1,8 @@
+# SPDX-FileCopyrightText: 2023 Luca Tagliavini <luca@teapot.ovh>
+# SPDX-FileCopyrightText: 2024 Samuele Musiani <samu@teapot.ovh>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: Check filenames
 on:
   workflow_call:
