--- a/.github/workflows/jsoncheck.yaml
+++ b/.github/workflows/jsoncheck.yaml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2024 Samuele Musiani <samu@teapot.ovh>
+# SPDX-FileCopyrightText: 2025 Stefano Volpe <foxy@teapot.ovh>
+# SPDX-FileCopyrightText: 2025 Eyad Issa <eyadlorenzo@gmail.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: JSON check
 
 on:
