--- a/.github/workflows/statik.yaml
+++ b/.github/workflows/statik.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2024 - 2025 Samuele Musiani <samu@teapot.ovh>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 name: Build and Deploy
 on:
   workflow_call:
