--- a/.github/workflows/synta.yaml
+++ b/.github/workflows/synta.yaml
@@ -1,3 +1,9 @@
+# SPDX-FileCopyrightText: 2023 Luca Tagliavini <luca@teapot.ovh>
+# SPDX-FileCopyrightText: 2024 Samuele Musiani <samu@teapot.ovh>
+# SPDX-FileCopyrightText: 2024 Stefano Volpe <foxy@teapot.ovh>
+#
+# SPDX-License-Identifier: AGPL-3.0-only
+
 on:
   push:
     branches:
